src/objects/Glxy_Project_Location_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Building_Name__c</fullName>
        <formula>LocationCD__r.Building_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>LocationCD__r.City__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationCD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location Code</label>
        <referenceTo>PBS_Building__c</referenceTo>
        <relationshipLabel>Location Data</relationshipLabel>
        <relationshipName>Project_Location_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Code_Plus__c</fullName>
        <formula>LocationCD__r.Location_Code_Plus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Code Plus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectLocationID__c</fullName>
        <externalId>true</externalId>
        <label>Project Location ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>LocationCD__r.State_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <label>Transaction</label>
        <referenceTo>Glxy_Transaction__c</referenceTo>
        <relationshipLabel>Project Location Transactions</relationshipLabel>
        <relationshipName>Project_Location_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Project Location Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PLT-{00000}</displayFormat>
        <label>Project Location Transactions ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Location Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>